--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
         <a href="#" class="topbutton"><img src="images/topbutton.png" alt="button"></a>
         <header>
-            <a href="LANXESS.html"><img src="images/lanxess.png" alt="logo" id="logo"></a>
+            <a href="index.html"><img src="images/lanxess.png" alt="logo" id="logo"></a>
             <ul>
                 <li><a href="#">Chemistry In Daily Life</a></li>
                 <li><a href="#">LANXESS Story</a></li>
